--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 
 <head>
-    </style>
     <meta charset="UTF-8">
-    <title>Country facts</title>
+    <title>Country information</title>
     <link rel="stylesheet" href="styles.css">
     <script src="./node_modules/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
